force-app/main/default/objects/AuditRecommendation__c/AuditRecommendation__c.object-meta.xml
<CustomObject>
    <label>Audit Recommendation</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>