force-app/main/default/objects/AuditRecommendation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shelf Placement</fullName>
            </value>
            <value>
                <fullName>Restock</fullName>
            </value>
            <value>
                <fullName>Competitor Response</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Replenishment Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>