force-app/main/default/objects/AuditRecommendation__c/fields/ShelfAudit__c.field-meta.xml
<CustomField>
    <fullName>ShelfAudit__c</fullName>
    <label>Shelf Audit</label>
    <referenceTo>ShelfAudit__c</referenceTo>
    <relationshipLabel>Audit Recommendations</relationshipLabel>
    <relationshipName>AuditRecommendations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>