force-app/main/default/objects/AuditRecommendation__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit</referenceTo>
    <relationshipLabel>Audit Recommendations</relationshipLabel>
    <relationshipName>AuditRecommendations</relationshipName>
    <type>Lookup</type>
</CustomField>